--- a/Comparison.Rmd
+++ b/Comparison.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Comparison between NCHU and FCU"
+title: "Trends in higher education"
 author: "Brian"
 date: "6/17/2021"
 output: html_document
@@ -9,11 +9,22 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## Analysis of application data from new students (work in progress)
- 
-The results are from data of 'admitted' international students, which is not identical to the 'enrolled' international students. NCHU's data is for 2021, whereas FCU's data is for 2020. It is because FCU's 2021 data is not accessible at this moment. 
+### Where international students are from and what they study(work in progress)
+
+We analyzed data of 'admitted' international students from National Chung Hsing University(NCHU,國立中興大學) and Feng Chia University(FCU,逢甲大學). The results show that the trends are very different and international students are pursuing different goals in each university. 
+
+*For full analysis results, refer to [NCHU](index.html),[FCU](FCU_admission.html).
+
+**Summary**
+
+- Indonesia is ranked first by the number of students in both NCHU and FCU.
+- NCHU attracts more students from India and Pakistan, whereas most Japanese students choose FCU.
+- NCHU is strong in agricultural and natural resources, engineering, but, FCU is focused on international business.
+- NCHU is the place for Master's and Ph.D., however, more students choose CFU for Bachelor's degree.
 
 Nationality
+
+In NCHU, Indonesia is ranked first by the number of students, followed by Vietnam, India, Pakistan, and Malaysia. The first place in FCU is also Indonesia, but, Japan appears to be the second-largest group, followed by Thailand, Vietnam, and India. While Pakistan is ranked in 4th place in NCHU, FCU has no students from the same country.
 
 ```{r, echo=FALSE, out.width="50%", fig.align = "center", fig.show='hold', fig.cap="NCHU(left) vs FCU(right)"}
 knitr::include_graphics(
@@ -24,6 +35,8 @@ knitr::include_graphics(
 
 College
 
+The college of agricultural and natural resources is the most preferred in NCHU. However, most students choose the college of business in FCU. In other words, while NCHU is strong in science and engineering, FCU shows strength in business.
+
 ```{r, echo=FALSE, out.width="50%", fig.align = "center", fig.show='hold', fig.cap="NCHU(left) vs FCU(right)"}
 knitr::include_graphics(
   c("NCHU_College.svg",
@@ -33,6 +46,8 @@ knitr::include_graphics(
 
 Department
 
+The two international programs(international bachelor program of agribusiness and international master program of agribusiness) attract a large group of international students in NCHU, followed by marketing, biomedical engineering, and mechanical engineering. In FCU, the pre-major program for international freshman students is ranked 1st, followed by international business, and international business administration in English. In particular, these three departments account for about 50% of all international students in FCU.
+
 ```{r, echo=FALSE, out.width="50%", fig.align = "center", fig.show='hold', fig.cap="NCHU(left) vs FCU(right)"}
 knitr::include_graphics(
   c("NCHU_Department.svg",
@@ -41,6 +56,8 @@ knitr::include_graphics(
 ```
 
 Degree
+
+Nearly 70% of students are pursuing a Ph.D. or Master's degree in NCHU. By contrast, more than 60% of FCU's students are pursuing bachelor's degree. Only 6% plan to get Ph.D. in FCU. Particularly, all students from Pakistan study for Ph.D. or Master's degree in NCHU.
 
 ```{r, echo=FALSE, out.width="50%", fig.align = "center", fig.show='hold', fig.cap="NCHU(left) vs FCU(right)"}
 knitr::include_graphics(
@@ -57,3 +74,11 @@ knitr::include_graphics(
 <!--     "FCU_Nationality_Department_.png") -->
 <!-- ) -->
 <!-- ``` -->
+
+Note:
+
+1. "Admitted' international student indicates someone who has received an acceptance letter from the university.
+
+2. The accuracy of results would be increased if data of ‘enrolled’ international students are analyzed.
+
+2. NCHU's data is for 2021. However, FCU's data for 2021 is not available yet, so data for 2020 is used instead.
