--- a/index.Rmd
+++ b/index.Rmd
@@ -7,6 +7,12 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(xlsx)
+library(tidyverse)
+library(ggplot2)
+library(networkD3)
+library(htmlwidgets)
+source("mSankey.R", local = knitr::knit_global())
 ```
 
 ### Where international students are from and what they study(work in progress)
@@ -65,6 +71,34 @@ knitr::include_graphics(
     "FCU_Degree.svg")
 )
 ```
+
+**Interrelationship analysis**
+
+Nationality and college
+
+The height of rectangular indicates the number of students. The width of the line indicates the number of students between connected rectangular
+
+```{r echo=FALSE, message=FALSE, fig.cap="NCHU"}
+prefix <- "NCHU"
+dataset <- read.xlsx("NCHU_2021.xlsx","Sheet1",header=TRUE)
+dataset <- dataset %>%
+  mutate(College = str_remove(College,"College of ")) %>%
+  mutate(Department = str_remove(Department,"Department of "))
+mSankey(dataset,prefix,"Nationality","College")
+```
+
+
+```{r echo=FALSE, message=FALSE, fig.cap="FCU"}
+prefix <- "FCU"
+dataset <- read.xlsx("FCU_2020.xlsx","Sheet1",header=TRUE)
+dataset <- dataset %>%
+  mutate(College = str_remove(College,"College of ")) %>%
+  mutate(Department = str_remove(Department,"Department of "))
+mSankey(dataset,prefix,"Nationality","College")
+```
+
+
+
 
 <!-- Nationality, department -->
 
