--- a/FCU_admission.Rmd
+++ b/FCU_admission.Rmd
@@ -174,3 +174,5 @@ Degree, nationality, college
 ```{r echo=FALSE, message=FALSE}
 mSankey(dataset,prefix,"Degree","Nationality","College")
 ```
+
+Go to [comparison](https://briankimstudio.github.io/New_student/)
