--- a/FCU_admission.Rmd
+++ b/FCU_admission.Rmd
@@ -176,3 +176,6 @@ mSankey(dataset,prefix,"Degree","Nationality","College")
 ```
 
 Go to [comparison](https://briankimstudio.github.io/New_student/)
+
+```{r child = 'Menu.Rmd'}
+```
