--- a/Menu.Rmd
+++ b/Menu.Rmd
@@ -11,3 +11,4 @@ output: html_document
 - [FCU逢甲大學](FCU_admission.html)
 - [NCKU國立成功大學](NCKU.html)
 - [NCTU國立陽明交通大學,NTHU國立清華大學](NCTU_NTHU.html)
+- [NCCU國立政治大學](NCCU.html)
