--- a/World_map.Rmd
+++ b/World_map.Rmd
@@ -23,22 +23,82 @@ data <- data %>% left_join(select(coordinates,Country,latitude,longitude),coordi
 
 worldmap <-  maps::map("world", fill=TRUE, plot=FALSE) %>%
   maptools::pruneMap(xlim = c(-180,180), ylim = c(-60,80))
+mapdata <-broom::tidy(worldmap)
+mapdata$region <- str_replace(mapdata$region,"UK","United Kingdoms")
+mapdata$region <- str_replace(mapdata$region,"USA","United States")
+mapdata <- left_join(mapdata,data,by=c("region"="Country"))
+# a<-aaa %>% filter(is.na(Degree)) %>% distinct(region)
+mapdata$Degree[mapdata$Degree==0] <-0.1
+mapdata$Degree[is.na(mapdata$Degree)] <-0.1
+mapdata$Exchange[mapdata$Exchange==0] <-0.1
+mapdata$Exchange[is.na(mapdata$Exchange)] <-0.1
+mapdata$Language[mapdata$Language==0] <-0.1
+mapdata$Language[is.na(mapdata$Language)] <-0.1
+
+# a<-aaa %>% count(Degree)
+
+smap <- function(data, label, field) {
+  ggplot() +
+    geom_polygon(data=data, aes(fill=!!sym(field), x = long, y = lat, group = group),color="grey",size=0.1) +
+    theme_void() +
+    scale_fill_gradient(trans="log",low="yellow",high="red",
+                        breaks=c(1,100,500,1000,10000),
+                        name="Number of students",
+                        guide = guide_legend( keyheight = unit(3, units = "mm"),
+                                              keywidth  = unit(12, units = "mm"),
+                                              label.position = "bottom",
+                                              title.position = 'top', nrow=1)
+                        
+    ) +
+    geom_text_repel( data=label %>% arrange(desc(!!sym(field))) %>% head(16),
+                     aes(x=longitude, y=latitude, label=paste(Country,!!sym(field))),
+                     size=3) +
+    labs(
+      title = "Origins of international students in Taiwan",
+      subtitle = paste(field,"students"),
+      caption = "By Innovation Formosa. Data: National statistics, Taiwan"
+    ) +
+    theme(
+      text = element_text(color = "#22211d"),
+      plot.background = element_rect(fill = "#f5f5f2", color = NA),
+      panel.background = element_rect(fill = "#f5f5f2", color = NA),
+      legend.background = element_rect(fill = "#f5f5f2", color = NA),
+      
+      plot.title = element_text(size= 12, hjust=0.5, color = "#4e4d47"),
+      plot.subtitle = element_text(size= 10, hjust=0.5, color = "#4e4d47",
+                                   margin = margin(b = 0.5,  unit = "cm")),
+      plot.caption = element_text( size=8, hjust=0.5, color = "#4e4d47"),
+      
+      legend.position = c(0.7, 0.09)
+    ) +
+    
+    coord_map()
+}
 ```
 
-### Degree-seeking students in Taiwan
+### Summary
+
+#### Degree seeking
+
+- Most degree seeking students are from Asian countries.
+- Eswatini is the only African country sending more than 300 degree seeking students to Taiwan.
+
+#### Chinese language
+
+- Language course students are mainly from Asia, Europe, North, Central, and South America.
+- Honduras sends the largest number of language students in Central America.
+
+#### Exchange student
+
+- European students come primarily to Taiwan as exchange students.
+- France is ranked 1st in the number of exchange students.
+
+### Origins of international students in Taiwan
+
+#### Degree-seeking students in Taiwan
 
 ```{r, out.width="100%", fig.align='center',fig.cap="The number of degree-seeking students in Taiwan (By country)"}
-ggplot(data= broom::tidy(worldmap)) + 
-  geom_polygon(mapping = aes(x = long, y = lat, group = group), 
-               fill =  "#B3B1B5", color = "white",size = 0.2) +
-  geom_point( data=data %>% filter(Degree>9) %>% arrange(Degree), aes(size=Degree, color=Degree, x=longitude, y=latitude)) +
-  geom_text_repel( data=data %>% filter(Degree>9) %>% arrange(desc(Degree)), aes(x=longitude, y=latitude, label=paste(Country,Degree)), size=2) +
-  scale_color_viridis() +
-  theme_void() +
-  theme(plot.title = element_text(hjust = 0.5)) +
-  labs(title="The number of degree-seeking students in Taiwan (By country)") +
-  coord_map()
-
+smap(mapdata,data,"Degree")
 ```
 
 ```{r}
@@ -47,20 +107,10 @@ knitr::kable(row.names = T,format.args = list(big.mark = ","),
   kable_styling(full_width = F)
 ```
 
-### Language course students in Taiwan
+#### Language course students in Taiwan
 
 ```{r, out.width="100%", fig.align='center',fig.cap="The number of language course students in Taiwan (By country)"}
-ggplot(data= broom::tidy(worldmap)) + 
-  geom_polygon(mapping = aes(x = long, y = lat, group = group), 
-               fill =  "#B3B1B5", color = "white",size = 0.2) +
-  geom_point( data=data %>% filter(Language>9) %>% arrange(Language), aes(size=Degree, color=Language, x=longitude, y=latitude)) +
-  geom_text_repel( data=data %>% filter(Language>9), aes(x=longitude, y=latitude, label=paste(Country,Language)), size=2) +
-  scale_color_viridis() +
-  theme_void() +
-  theme(plot.title = element_text(hjust = 0.5)) +
-  labs(title="The number of language course students in Taiwan (By country)") +
-  coord_map()
-
+smap(mapdata,data,"Language")
 ```
 
 ```{r}
@@ -69,20 +119,10 @@ knitr::kable(row.names = T,format.args = list(big.mark = ","),
   kable_styling(full_width = F)
 ```
 
-### Exchange students in Taiwan
+#### Exchange students in Taiwan
 
 ```{r, out.width="100%", fig.align='center',fig.cap="The number of exchange students in Taiwan (By country)"}
-ggplot(data= broom::tidy(worldmap)) + 
-  geom_polygon(mapping = aes(x = long, y = lat, group = group), 
-               fill =  "#B3B1B5", color = "white",size = 0.2) +
-  geom_point( data=data %>% filter(Exchange>9) %>% arrange(Exchange), aes(size=Degree, color=Exchange, x=longitude, y=latitude)) +
-  geom_text_repel( data=data %>% filter(Exchange>9), aes(x=longitude, y=latitude, label=paste(Country,Exchange)), size=2) +
-  scale_color_viridis() +
-  theme_void() +
-  theme(plot.title = element_text(hjust = 0.5)) +
-  labs(title="The number of exchange students in Taiwan (By country)") +
-  coord_map()
-
+smap(mapdata,data,"Exchange")
 ```
 
 ```{r}
@@ -90,3 +130,8 @@ knitr::kable(row.names = T,format.args = list(big.mark = ","),
   data %>% select(Country,Exchange) %>% arrange(desc(Exchange)) %>% head(20)) %>%
   kable_styling(full_width = F)
 ```
+
+### Data source
+
+中華民國統計資訊網 Nationali Statistics, R.O.C(Taiwan)
+https://www1.stat.gov.tw/ct.asp?xItem=15423&CtNode=4708&mp=3
