--- a/World_map.Rmd
+++ b/World_map.Rmd
@@ -92,8 +92,8 @@ This analysis is based on the data published in 2020 by [National Statistics, Ta
 
 #### Exchange student
 
-- European students come primarily to Taiwan as exchange students.
 - France is ranked 1st in the number of exchange students.
+- European students in Taiwan are mostly exchange students.
 
 ### Origins of international students in Taiwan
 
