--- a/TOPIK.Rmd
+++ b/TOPIK.Rmd
@@ -14,13 +14,13 @@ library(ggrepel)
 library(viridis)
 library(kableExtra)
 
-dataset <- read_excel(path = "TOPIK.xlsx",sheet=2,col_names = TRUE)
-countries <- read_excel(path="Countries.xlsx", sheet=1,col_names = TRUE)
+dataset <- read_excel(path = "TOPIK.xlsx",sheet=1,col_names = TRUE)
+# countries <- read_excel(path="Countries.xlsx", sheet=1,col_names = TRUE)
 coordinates <- read_excel(path="Coordinates.xlsx", sheet=1,col_names = TRUE)
-data <- dataset %>% left_join(select(countries,Country,Chinese),by=c("Country"="Chinese"))
-data <- data %>% select(Country.y,Degree,Exchange,Language)
-colnames(data)=c('Country','Degree','Exchange','Language')
-data <- data %>% left_join(select(coordinates,Country,latitude,longitude),coordinates,by='Country')
+# data <- dataset %>% left_join(select(countries,Country,Chinese),by=c("Country"="Chinese"))
+# data <- data %>% select(Country.y,Degree,Exchange,Language)
+# colnames(data)=c('Country','Degree','Exchange','Language')
+data <- dataset %>% left_join(select(coordinates,Country,latitude,longitude),coordinates,by='Country')
 
 worldmap <-  maps::map("world", fill=TRUE, plot=FALSE) %>%
   maptools::pruneMap(xlim = c(-180,180), ylim = c(-60,80))
@@ -29,12 +29,14 @@ mapdata$region <- str_replace(mapdata$region,"UK","United Kingdoms")
 mapdata$region <- str_replace(mapdata$region,"USA","United States")
 mapdata <- left_join(mapdata,data,by=c("region"="Country"))
 # a<-aaa %>% filter(is.na(Degree)) %>% distinct(region)
-mapdata$Degree[mapdata$Degree==0] <-0.1
-mapdata$Degree[is.na(mapdata$Degree)] <-0.1
-mapdata$Exchange[mapdata$Exchange==0] <-0.1
-mapdata$Exchange[is.na(mapdata$Exchange)] <-0.1
-mapdata$Language[mapdata$Language==0] <-0.1
-mapdata$Language[is.na(mapdata$Language)] <-0.1
+mapdata$T1[mapdata$T1==0] <-0.1
+mapdata$T1[is.na(mapdata$T1)] <-0.1
+mapdata$T2[mapdata$T2==0] <-0.1
+mapdata$T2[is.na(mapdata$T2)] <-0.1
+# mapdata$Exchange[mapdata$Exchange==0] <-0.1
+# mapdata$Exchange[is.na(mapdata$Exchange)] <-0.1
+# mapdata$Language[mapdata$Language==0] <-0.1
+# mapdata$Language[is.na(mapdata$Language)] <-0.1
 
 # a<-aaa %>% count(Degree)
 
@@ -51,13 +53,13 @@ smap <- function(data, label, field) {
                                               title.position = 'top', nrow=1)
                         
     ) +
-    geom_text_repel( data=label %>% arrange(desc(!!sym(field))) %>% head(16),
+    geom_text_repel( data=label %>% arrange(desc(!!sym(field))) %>% filter(!!sym(field)>=2),
                      aes(x=longitude, y=latitude, label=paste(Country,!!sym(field))),
                      size=3) +
     labs(
-      title = "Origins of international students in Taiwan",
-      subtitle = paste(field,"students"),
-      caption = "By Innovation Formosa. Data: National statistics, Taiwan"
+      title = "The number of people passsed TOPIK",
+      # subtitle = paste(field,"students"),
+      caption = "天天韓語"
     ) +
     theme(
       text = element_text(color = "#22211d"),
@@ -77,7 +79,11 @@ smap <- function(data, label, field) {
 }
 ```
 
-## R Markdown
+## TOPIK 1
 ```{r, out.width="100%", fig.align='center',fig.cap="The number of degree-seeking students in Taiwan (By country)"}
-smap(mapdata,data,"Degree")
+smap(mapdata,data,"T1")
+```
+## TOPIK 2
+```{r, out.width="100%", fig.align='center',fig.cap="The number of degree-seeking students in Taiwan (By country)"}
+smap(mapdata,data,"T2")
 ```
